--- a/css/style.css
+++ b/css/style.css
@@ -731,7 +731,7 @@ h3.my-profession {
     }
 
     .main-contant {
-        padding-left: 0;
+        padding-left: 0px;
     }
 
     .about .about-content .personal-info .info-item p span {
