--- a/css/style.css
+++ b/css/style.css
@@ -735,7 +735,7 @@ h3.my-profession {
     }
 
     .about .about-content .personal-info .info-item p span {
-        display: block;
+        display: inline-block;
         margin-left: 0;
     }
 
